# pulsar-lang

./: .gitignore  CODE_ANALYSIS_REPORT.md  CROWE_NEXUS_LANGUAGE_SPEC.md  DEALER_LOGIC_ARR_CALCULATOR.html  DEALER_LOGIC_DEPLOYMENT_CHECKLIST.md  DEALER_LOGIC_GM_PITCH_SCRIPTS.md  DEALER_LOGIC_INVESTOR_DECK.md  DEALER_LOGIC_PRICING_GUARANTEE.md  DEALER_LOGIC_PRICING_SLIDES.md  DEALER_LOGIC_ROI_CALCULATOR.html  DEALER_LOGIC_VALUATION_FRAMEWORK.md  DEPLOYMENT_STATUS_REPORT.md  ECOSYSTEM_PUBLISHER_SETUP.md  FINAL_PUBLISHING_COMMANDS.md  FLUX_ENHANCEMENT_ROADMAP.md  FLUX_LANGUAGE_SPECIFICATION.md  FLUX_NAME_ANALYSIS_AND_ALTERNATIVES.md  LANGUAGE_ECOSYSTEM_DESIGN.md  NEXT_GEN_LANGUAGE_SYNTHESIS.md  PLATFORM_PUBLISHING_MASTER.md  PROJECT_PRIORITY_ANALYSIS.md  PULSAR_COMPREHENSIVE_REVIEW.md  STRIPE_CLI_TESTING.md  add-claude-to-path.bat  add-claude-to-path.ps1  autonomous_trading_loop_ultra_prompt.md  cleanup_agent_duplicates.ps1  connect_ollama.bat  create_trading_tables.sql  crypto_trading_interface.html  crypto_trading_workflow.js  deploy_trading_system.bat  deployment_checklist.md  docker-compose.yml  enhanced_workflow_step.js  improved_trading_workflow.json  install-fly.ps1  live_monitoring.ps1  multi_exchange_setup.md  package-lock.json  (+20 more)
agent_configs/: AGENT_INVENTORY.md  DEPLOYMENT_GUIDE.md  ENHANCEMENT_GUIDE.md  deploy_agents.sh  deploy_production.ps1  elevenlabs_cli_deployment.sh  elevenlabs_cli_setup.md  enhance_agents.ps1  enhanced_finance_config_staging.json  enhanced_reception_config_staging.json  enhanced_sales_config_staging.json  priority1_implementation_summary.md
autonomous-trading-system/: .gitignore  API_SETUP_GUIDE.md  COMPLETE_SYSTEM_OVERVIEW.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  Dockerfile  EXCHANGE_API_QUICKSTART.md  GITHUB_SETUP.md  LIVE_DEPLOYMENT.md  PIPEDREAM_DEPLOYMENT_STEP_BY_STEP.md  PRODUCTION_READY.md  README.md  STATUS.md  SYSTEM_COMPLETE.md  deploy.sh  docker-compose.yml  package-lock.json  package.json
crios-nova/: .dockerignore  DEPLOY.md  Dockerfile  fly.toml  package-lock.json  package.json  railway.json  render.yaml  server-production.js  server.js
crios-nova-frontend/: index.html  package.json  vite.config.js
crios-nova-research/: package-lock.json  package.json
crowe-logix-audio/: README.md  package.json
crowecode-platform/: .bfg-replacements.txt  .dockerignore  .gcloudignore  API_DOCUMENTATION.md  API_SETUP.md  CLAUDE.md  CROWE TRADE COINBASE PROJECT API.txt  CROWECODE_AI.md  Create Pipedream OAuth client.txt  DEPLOYMENT.md  DEPLOYMENT_FULL_STACK.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOY_TO_CROWECODE_VPS.md  DNS_SETUP_NAMECHEAP.md  Dockerfile  Dockerfile.analysis  Dockerfile.gcp  Dockerfile.mcp  Dockerfile.websocket  NEXT_STEPS.md  (+82 more)
cypher-lang/: .gitignore  Cargo.toml  LANGUAGE_SPEC.md  README.md  SECURITY.md  package.json
cypher-lang/src/: index.ts  main.rs
cypher-lang/src/cli/: index.ts
cypher-lang/src/compiler/: evm.ts  wasm.ts
cypher-lang/src/examples/: auction.cypher  identity.cypher  voting.cypher
cypher-lang/src/lexer/: index.ts
cypher-lang/src/parser/: index.ts
cypher-lang/src/templates/: index.ts
cypher-lang/src/types/: crypto.ts  index.ts
genesis-lang/: Cargo.toml  EXPERIMENTAL_WARNING.md  README.md
genesis-lang/examples/: multi_agent_workflow.rs  simple_agent.rs  tool_integration.rs
genesis-lang/examples/configs/: coding_agent.toml  creative_agent.toml  project_config.toml  research_agent.toml  research_workflow.toml
genesis-lang/src/: config.rs  error.rs  lib.rs  main.rs
genesis-lang/src/agent/: config.rs  manager.rs  mod.rs
genesis-lang/src/agent/providers/: mock.rs  mod.rs  openai.rs
genesis-lang/src/memory/: basic.rs  mod.rs  vector.rs
genesis-lang/src/tools/: builtin.rs  file.rs  http.rs  mod.rs  search.rs
genesis-lang/src/workflow/: engine.rs  mod.rs  planner.rs
mycelium-ei-lang/: .gitignore  ADVANCED_DEVELOPMENT_ROADMAP.md  COMMUNITY.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  Dockerfile  Dockerfile.cuda  FINAL_DEMO.md  MONETIZATION_STRATEGY.md  MULTI_PLATFORM_DISTRIBUTION.md  OPTIMIZATION_AND_ROADMAP.md  PRODUCTION_API_SETUP.md  PUBLISHING_INSTRUCTIONS.md  README.md  STRIPE_DEPLOYMENT_SUCCESS.md  bio_algorithms.py  bio_ml_integration.py  cultivation_monitor.py  mycelium_interpreter.py  network_framework.py  performance_optimizations.py  quantum_bio_computing.py
mycelium-ei-lang/.github/workflows/: multi-platform-publish.yml
mycelium-ei-lang/compiler/: Cargo.toml
mycelium-ei-lang/compiler/src/: ast.rs  codegen.rs  error.rs  lexer.rs  lib.rs  optimization.rs  parser.rs  semantic.rs
mycelium-ei-lang/conda-recipe/: meta.yaml
mycelium-ei-lang/crypto-payments/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  Procfile  app.json  coinbase_gateway.py  docker-compose.yml  dual_payment_api.py  flask_app.py  main.py  payment_api.py  payment_frontend.html  railway.json  render.yaml  requirements-fastapi.txt  requirements-full.txt  requirements.txt  stripe_gateway.py  tokenomics.py  vercel.json
mycelium-ei-lang/docs/: _config.yml
mycelium-ei-lang/homebrew/: mycelium-ei-lang.rb
mycelium-ei-lang/marketing/: HACKERNEWS_POST.md  LINKEDIN_ARTICLE.md  PRODUCT_HUNT_LAUNCH.md  REDDIT_STRATEGY.md  TWITTER_LAUNCH.md
mycelium-ei-lang/npm-package/: .npmrc  README.md  index.js  michaelcrowe11-mycelium-ei-lang-0.1.0.tgz  package.json
mycelium-ei-lang/snap/: snapcraft.yaml
mycelium-ei-lang/vscode-extension/: README.md  language-configuration.json  mycelium-ei-lang-0.1.0.vsix  package-lock.json  package.json
mycelium-ei-lang/vscode-extension/snippets/: mycelium.json
mycelium-ei-lang/vscode-extension/src/: extension.ts
mycelium-ei-lang/vscode-extension/syntaxes/: mycelium.tmLanguage.json
mycelium-ei-lang/wasm/: demo.html  mycelium-wasm.js
pulsar-lang/: Cargo.toml  README.md  README_COMMERCIAL.md  push_to_github.sh
pulsar-lang/gazebo-templates/: cobot_workspace.world  launch_mobile_robot.py  mobile_robot.world
pulsar-lang/src/: consensus.rs  crypto_accel.rs  drivers.rs  fusion.rs  main.rs  neural_jit.rs  quantum.rs  ros2.rs  rt.rs  trajectory.rs  wcet.rs
(+630 files in other folders)
