[workspace]
members = [
    "compiler",
    "runtime",
    "stdlib",
    "tools/myc",
    "tools/mypm"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Parsing and compilation
nom = "7.0"
logos = "0.13"
inkwell = { version = "0.2", features = ["llvm15-0"] }
mlir-sys = "0.2"

# Python integration
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"

# Async and networking
reqwest = { version = "0.11", features = ["json"] }
mqtt = "0.3"

# Serialization and data
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }