[package]
name = "pulsar-lang"
version = "0.1.0"
edition = "2021"
authors = ["PULSAR Language Team <team@pulsarlang.org>"]
license = "Apache-2.0"
description = "PULSAR: The Real-Time Systems Language - Deterministic execution with microsecond precision"
homepage = "https://pulsarlang.org"
repository = "https://github.com/pulsar-lang/pulsar"
documentation = "https://docs.pulsarlang.org"
keywords = ["programming-language", "real-time", "embedded", "deterministic", "safety-critical"]
categories = ["compilers", "development-tools", "embedded"]

[workspace]
members = [
    "compiler",
    "runtime",
    "stdlib",
    "embedded",
    "safety",
    "profiling",
    "tools/cli",
    "tools/profiler",
    "tools/analyzer"
]

[dependencies]
# Core dependencies
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Real-time specific
nb = "1.1"               # Non-blocking APIs
heapless = "0.7"         # Collections without allocation
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
embedded-hal = { version = "0.2", optional = true }

# Timing and scheduling
instant = "0.1"          # Deterministic time measurements
priority-queue = "1.3"   # Real-time scheduling
crossbeam-channel = "0.5" # Lock-free channels

# Memory management
linked_list_allocator = { version = "0.10", optional = true }
buddy_system_allocator = { version = "0.9", optional = true }

# Safety and verification
static_assertions = "1.1"
typenum = "1.16"

# Hardware abstraction
nrf52840-hal = { version = "0.16", optional = true }
stm32f4xx-hal = { version = "0.14", optional = true }
riscv = { version = "0.10", optional = true }

# Language components
pulsar-compiler = { path = "compiler" }
pulsar-runtime = { path = "runtime" }
pulsar-stdlib = { path = "stdlib" }

[dev-dependencies]
tempdir = "0.3"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["std"]
std = []
no_std = ["heapless", "nb"]
embedded = ["no_std", "cortex-m", "cortex-m-rt", "embedded-hal"]
embedded-nrf52840 = ["embedded", "nrf52840-hal"]
embedded-stm32f4 = ["embedded", "stm32f4xx-hal"]
embedded-riscv = ["embedded", "riscv"]
safety-critical = ["static_assertions", "pulsar-safety/do-178c"]
real-time = ["pulsar-runtime/real-time-scheduler"]
memory-pool = ["linked_list_allocator", "buddy_system_allocator"]
wcet-analysis = ["pulsar-compiler/wcet"]

[[bin]]
name = "pulsar"
path = "src/main.rs"

[[bin]]
name = "pulsar-profile"
path = "src/profile.rs"

[[bin]]
name = "pulsar-timing"
path = "src/timing.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"  # Optimize for size and predictable timing

[profile.dev]
debug = true
opt-level = 0

# Real-time optimized profile
[profile.realtime]
inherits = "release"
opt-level = 2      # Balance between speed and code size
debug = false      # Remove debug overhead
overflow-checks = false  # Remove runtime checks for performance
lto = "fat"       # Maximum link-time optimization
codegen-units = 1  # Single compilation unit for predictability