[package]
name = "mycelium-ei-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Mycelium-EI Team <team@mycelium-ei.com>"]
description = "Mycelium-EI-Lang compiler"
license = "Apache-2.0"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }
nom = { workspace = true }
clap = { workspace = true }

# Additional compiler-specific dependencies
tracing = "0.1"
tracing-subscriber = "0.3"
petgraph = "0.6"
indexmap = "2.0"

[lib]
name = "mycelium_ei_compiler"
crate-type = ["cdylib", "rlib"]